@@ -29,3 +29,8 @@ Kindly email me directly for any feedback and hit the like button.
 ## Screenshots
 
 ![Screenshot](https://github.com/imujtaba8488/showcase/blob/master/currency_chooser_01.gif)
+
+## Supported Attributes
+
+|Property| Description| Default
+|--------|------------|--------|
